correct gap between profile__about and edit button, pushed container__button content to end of container, fixed syntax error in media query

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -44,6 +44,7 @@
   .profile__container-button {
     display: flex;
     align-items: flex-end;
+    margin-top: auto;
   }
   .profile__button-edit {
     background-color: transparent;
@@ -107,13 +108,14 @@
       text-align: center;
     }
     .profile__about {
+      margin: 0 0 32px;
       text-align: center;
     }
   
     .profile__details {
       align-items: center;
       flex-grow: 1;
-      min-width: calc(100vw-32px);
+      min-width: calc(100% - 32px);
     }
     .profile__container-button {
       flex-direction: column;
